Bug 1083079 - Prevent the size of TiledDrawTarget from being zero due to its tiles having negative offsets. r=mattwoodrow